# elyria-pre-effect-enforcement-harness

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: boundary.py  enforcement.py  main.py  models.py  physics.py  physics_engine.py  prove.py  receipts.py
docs/: BOUNDED_PROOF.md  CLIENT_DEMO_SCRIPT.md  PRESSURE_TEST_MATRIX.md  PROOF_STATUS.md
examples/: escalate_degraded_visibility.json  execute_valid.json  halt_integrity_failure.json  physics_abort_high_strain.json  physics_dream_headroom.json  refuse_revoked_authority.json  stale_evidence.json
state/: deploy_state.json
tests/: test_harness.py
