[project]
name = "elyria-pre-effect-enforcement-harness"
version = "0.1.0"
description = "Bounded proof harness showing protected actions cannot reach effect unless EXECUTE resolves."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
